Fixing contact page
-Updated to new navbar and footer
-Fixed logo link in navbar
-Fixed link for image to align with GitHub links
-Changed alignment of header to not overlap with navbar

--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 30vh;
+  height: 40vh;
 }
 
 .contact-head .container {
-  height: 30vh;
+  height: 40vh;
 }
 
 /* Custom CSS */
